Fixing faulty layout issues

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,4 @@
-.container {
+.main-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,10 +8,9 @@
 }
 
 .react-component-div {
-  flex-basis: auto;
   width: 100%;
   justify-content: center;
-  align-self: start;
+  align-self: center;
 }
 
 .ad-position {
